# estate-value-index

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  api_server.py  prefect.yaml  pyproject.toml  pytest.ini  scrapy.cfg  start.sh  train_model.py
.github/workflows/: README.md  ci.yml  deploy.yml  ml-monitoring.yml  ml-pipeline.yml
agents/docs/: api-web-deploy.md  architecture.md  data-pipeline.md  ml-and-models.md
config/: feature_subsets.yaml  pipeline_config.yaml  recommended_features.json
data/economy/: sales_data_48_months.csv  swedish_ki_indicators_monthly.csv
data/reference/economy/: sales_data_48_months.csv  swedish_economic_indicators_quarterly.csv  swedish_interest_rates_monthly.csv  swedish_ki_indicators_monthly.csv
data/reference/geo/: stockholm_metro_stations.csv  stockholm_train_stations.csv
docs/: PROJECT.md  api-web-deploy.md  architecture.md  data-pipeline.md  ml-and-models.md
notebooks/: evaluate_models.py
schemas/: bq_features_engineered.json  bq_geocodes.json  bq_raw_listings.json  predictions_table.json
scripts/: README.md  __init__.py  analyze_feature_correlation.py  backfill_booli.sh  backfill_model_hashes.py  cloud_run_disable.sh  cloud_run_enable.sh  create_predictions_table.sh  deploy_cloud_run.sh  dev_web.sh  evaluate_models.py  fetch_economic_data.py  lint.sh  plan_cloud_cleanup.sh  run_catchup_backfill.sh  scrape_solna_sundbyberg.sh  setup_bigquery.sh  setup_gcp.sh  startup.sh
scripts/lib/: gcp_account.sh  preamble.sh
scripts/vertex_ai/: build_and_push.sh  submit_custom_job.sh
src/estate_value_index/: __init__.py  exceptions.py  model_artifacts.py
src/estate_value_index/analytics/: __init__.py  area_statistics.py  feature_count.py  high_end_weighting.py  market_normalized_target.py  micro_areas.py  model_suite.py  overall_statistics.py  ppsqm_blend.py  premium_specialist.py  production_residual_calibration.py  residual_calibration.py  specialist_model.py  tiered_ensemble.py  value_analysis.py
src/estate_value_index/cli/: __init__.py  __main__.py  area_performance_metrics.py  backfill_booli.py  batch_scrape.py  calibration_experiment.py  crawl_booli.py  feature_count_experiment.py  generate_area_statistics.py  generate_overall_statistics.py  generate_value_analysis.py  geocode_addresses.py  high_end_weighting_experiment.py  market_normalized_experiment.py  materialize_features.py  micro_areas.py  migrate_to_bigquery.py  model_suite_experiment.py  monitor_costs.py  ppsqm_experiment.py  premium_specialist_experiment.py  process_listings.py  specialist_experiment.py  tiered_ensemble_experiment.py  train_production_models.py
src/estate_value_index/experiments/: __init__.py  feature_count.py  high_end_weighting.py  model_suite.py  ppsqm_blend.py
src/estate_value_index/ingestion/: bigquery_upload.py  processing.py
src/estate_value_index/ml/: __init__.py  area_names.py  ask_price.py  constants.py  data_loader.py  estimate_range_factors.py  feature_materialization.py  geocoding.py  market_normalized_target.py  poi.py  premium_specialist.py  preprocessing.py  production_models.py  production_residual_calibration.py  residual_calibration.py  specialist_model.py  (+3 more)
tests/: conftest.py  test_api_server.py  test_data_loader.py  test_deployment_integration.py  test_e2e_pipeline.py  test_features.py  test_ingestion_parsers.py  test_ingestion_utils.py  test_model_regression.py  test_pipeline_direct_imports.py  test_preprocessing.py  test_settings.py  test_subprocess_refactor.py  test_time_series_utils.py  test_training.py
tests/analytics/: test_area_statistics.py  test_feature_count.py  test_high_end_weighting.py  test_market_normalized_target.py  test_micro_areas.py  test_model_suite.py  test_overall_statistics.py  test_ppsqm_blend.py  test_premium_specialist.py  test_production_residual_calibration.py  test_residual_calibration.py  test_specialist_model.py  test_tiered_ensemble.py  test_value_analysis.py
tests/api/: test_gcs_sidecar_upload.py  test_model_integrity.py
tests/cli/: test_backfill_booli.py  test_cli.py  test_geocode_addresses.py  test_train_production_models.py
tests/experiments/: test_feature_count.py  test_high_end_weighting.py  test_micro_areas.py  test_model_suite.py  test_ppsqm_blend.py
tests/fixtures/: bool_coercion_cases.json  synthetic_booli_listing.jsonl  synthetic_model_metrics.json  synthetic_value_analysis.json
tests/ingestion/: test_bigquery_upload.py  test_processing.py  test_spider_discovery.py
tests/ml/: conftest.py  test_amenity_coercion.py  test_data_loader.py  test_estimate_range_factors.py  test_feature_materialization.py  test_filter_api_contract.py  test_geocoding.py  test_market_normalized_target.py  test_poi.py  test_premium_specialist.py  test_production_model_specs.py  test_production_models_calibration.py  test_production_residual_calibration.py  test_residual_calibration.py  test_specialist_model.py  test_temporal_leakage.py  test_tiered_ensemble.py  test_training.py  test_training_workflow.py  test_where_clause_call_sites.py
tests/monitoring/: __init__.py  test_catchup_script.py  test_cost_monitoring.py  test_drift_detection.py  test_startup_script.py
tests/ops/: test_cost_monitoring.py  test_startup_script.py  test_vertex_training_image.py
tests/pipelines/: conftest.py  test_complete_pipeline_helpers.py  test_data_pipeline_helpers.py  test_deployment.py  test_deployment_pipeline_helpers.py  test_flow_signatures.py  test_ingestion.py  test_sync.py  test_training_pipeline.py  test_training_tasks.py
tests/scripts/: test_analyze_feature_correlation.py  test_area_performance_metrics.py
tests/unit/: __init__.py  conftest.py  test_cli.py
tests/utils/: test_bigquery_safety.py  test_no_unsafe_sql.py
vertex_ai/: Dockerfile  build_and_push.sh  cloudbuild.yaml  custom_job.yaml.example  submit_custom_job.sh
web/: .eslintrc.json  .prettierignore  .prettierrc  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/scripts/: check-route-runtime.mjs
(+235 files in other folders)
