[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estate-value-index"
version = "1.0.0"
description = "Swedish real estate ML system: authorized listings → BigQuery → LightGBM → Next.js"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Estate Value Index Team"}
]
keywords = ["real-estate", "machine-learning", "property-valuation", "sweden"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies (production runtime)
dependencies = [
    # Ingestion adapters
    "scrapy>=2.11.0",
    "requests>=2.31.0",
    "fake-useragent>=1.4.0",
    "lxml>=4.9.3",
    "itemadapter>=0.8.0",
    "twisted>=22.10.0",
    "cryptography>=42.0.8",
    "w3lib>=2.1.2",
    "curl-cffi>=0.15.0",
    "patchright>=1.61.0",

    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Machine learning
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",

    # API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",

    # GCP
    "google-cloud-storage>=2.10.0",
    "google-cloud-bigquery>=3.10.0",
    "google-cloud-bigquery-storage>=2.0.0",
    "db-dtypes>=1.4.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
# ML training dependencies
ml = [
    "lightgbm>=4.0.0",
    "xgboost>=3.0.0",
    "optuna>=3.0.0",
]

# Prefect pipeline orchestration (ingestion/training/analytics flows). Not
# needed to serve predictions — api_server.py never imports
# estate_value_index.pipelines — so keeping it out of the base dependencies
# keeps prefect and its dependency tree out of the serving Docker image.
pipeline = [
    "prefect>=3.0.0",
]

# Development dependencies
# `[dev]` pulls in every extra needed to actually run the test suite, so a
# fresh worktree can `uv pip install -e ".[dev]"` and have pytest collect
# without chasing ad-hoc deps (evidently, matplotlib, seaborn, geopy, etc.).
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=4.0.0",
    "estate-value-index[ml,pipeline,viz,geo,monitoring,vertex]",
]

# Visualization dependencies
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# Vertex AI training dependencies (additional to ml)
vertex = [
    "pyarrow>=12.0.0",
    "scipy>=1.10.0",
]

# Geocoding and POI features
geo = [
    "geopy>=2.4.0",
    "h3>=4.0.0",
]

# ML monitoring and drift detection
monitoring = [
    "evidently>=0.4.0,<0.5.0",
]

# All optional dependencies
all = [
    "estate-value-index[ml,dev,pipeline,viz,vertex,geo,monitoring]",
]

[project.scripts]
evi = "estate_value_index.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/adamthuvesen/estate-value-index"
Documentation = "https://github.com/adamthuvesen/estate-value-index/tree/main/docs"
Repository = "https://github.com/adamthuvesen/estate-value-index"
Issues = "https://github.com/adamthuvesen/estate-value-index/issues"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["estate_value_index*"]
namespaces = false

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=estate_value_index",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
markers = [
    "unit: Fast unit tests (no external dependencies)",
    "integration: Integration tests (database, API, etc.)",
    "e2e: End-to-end tests (full pipeline)",
    "slow: Slow-running tests (>10 seconds)",
    "bigquery: Tests requiring BigQuery access",
    "gcs: Tests requiring GCS access",
    "vertex: Tests requiring Vertex AI access",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# =============================================================================
# MyPy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
disallow_incomplete_defs = false  # Gradual adoption
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "lightgbm.*",
    "xgboost.*",
    "optuna.*",
    "prefect.*",
    "google.cloud.*",
]
ignore_missing_imports = true

# =============================================================================
# Ruff Configuration
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    "notebooks",
    "web",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__ files
"tests/*" = ["B011", "E402"]  # assert False; sys.path before imports
"src/estate_value_index/ingestion/booli/settings.py" = ["F403"]  # optional local_settings

[tool.ruff.lint.isort]
known-first-party = ["estate_value_index"]
known-third-party = ["scrapy", "pandas", "numpy", "sklearn", "lightgbm", "prefect"]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["src/estate_value_index"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
